editor: fix heading align (#8996)
this reverts all the custom layout based on divs & spans and moves back to using pseudo element for the expand/collapse icon.

There were a few problems with the previous logic:

1. We had to write custom logic for text alignment (not a huge deal but it could cause bugs down the line)
2. Aligning the icon properly was hit or miss. We were using flex which meant for multi line headings, the icon appeared way to the left instead of right next to the end of the heading.
3. The styling css for the previous logic was MASSIVE and handled lots of cases which meant more maintenance burden for us.

The new logic is simpler:

1. Use `::after` pseudo element for the expand/collapse icon. This works very nicely on Android.
2. Use selection range on the heading to compute bounding rects for each line. It's a bit hacky but works for both LTR & RTL headings.

---------

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -895,25 +895,18 @@ del.diffdel {
   text-decoration: none;
 }
 
-.ProseMirror h1 ,
-.ProseMirror h2 ,
-.ProseMirror h3 ,
-.ProseMirror h4 ,
-.ProseMirror h5 ,
-.ProseMirror h6 {
-  display: flex;
-  align-items: center;
-}
-
-.ProseMirror h1 .heading-collapse-icon,
-.ProseMirror h2 .heading-collapse-icon,
-.ProseMirror h3 .heading-collapse-icon,
-.ProseMirror h4 .heading-collapse-icon,
-.ProseMirror h5 .heading-collapse-icon,
-.ProseMirror h6 .heading-collapse-icon {
+.ProseMirror h1::after,
+.ProseMirror h2::after,
+.ProseMirror h3::after,
+.ProseMirror h4::after,
+.ProseMirror h5::after,
+.ProseMirror h6::after {
+  display: inline-block;
   cursor: pointer;
-  background-size: 18px;
-  margin-inline-start: 8px;
+  content: "";
+  background-size: var(--icon-size, 18px);
+  width: var(--icon-size, 18px);
+  height: var(--icon-size, 18px);
 
   background-color: var(--icon);
   mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxZW0iIGhlaWdodD0iMWVtIiB2aWV3Qm94PSIwIDAgMjQgMjQiPjxwYXRoIGZpbGw9IiM4ODg4ODgiIGQ9Ik03LjQxIDguNThMMTIgMTMuMTdsNC41OS00LjU5TDE4IDEwbC02IDZsLTYtNmwxLjQxLTEuNDJaIi8+PC9zdmc+)
@@ -923,101 +916,64 @@ del.diffdel {
   transform: rotate(0);
   transition: transform 250ms ease, opacity 200ms ease;
   opacity: 0;
-  user-select: none;
+  vertical-align: middle;
 }
 
-.ProseMirror h1 .heading-collapse-icon {
-  margin-top: 3.5px;
-  width: 18px;
-  height: 18px;
+.ProseMirror h2::after {
+  --icon-size: 16px;
 }
 
-.ProseMirror h2 .heading-collapse-icon {
-  margin-top: 3px;
-  width: 16px;
-  height: 16px;
+.ProseMirror h3::after {
+  --icon-size: 14px;
 }
 
-.ProseMirror h3 .heading-collapse-icon {
-  margin-top: 2.3px;
-  width: 15px;
-  height: 15px;
+.ProseMirror h4::after {
+  --icon-size: 14px;
 }
 
-.ProseMirror h4 .heading-collapse-icon {
-  margin-top: 1.8px;
-  width: 14px;
-  height: 14px;
+.ProseMirror h5::after {
+  --icon-size: 14px;
 }
 
-.ProseMirror h5 .heading-collapse-icon {
-  margin-top: 1.3px;
-  width: 13px;
-  height: 13px;
+.ProseMirror h6::after {
+  --icon-size: 11px;
 }
 
-.ProseMirror h6 .heading-collapse-icon {
-  margin-top: 0.3px;
-  width: 12px;
-  height: 12px;
-}
-
-
-.ProseMirror h1[data-collapsed="true"] .heading-collapse-icon,
-.ProseMirror h2[data-collapsed="true"] .heading-collapse-icon,
-.ProseMirror h3[data-collapsed="true"] .heading-collapse-icon,
-.ProseMirror h4[data-collapsed="true"] .heading-collapse-icon,
-.ProseMirror h5[data-collapsed="true"] .heading-collapse-icon,
-.ProseMirror h6[data-collapsed="true"] .heading-collapse-icon {
+.ProseMirror h1[data-collapsed="true"]::after,
+.ProseMirror h2[data-collapsed="true"]::after,
+.ProseMirror h3[data-collapsed="true"]::after,
+.ProseMirror h4[data-collapsed="true"]::after,
+.ProseMirror h5[data-collapsed="true"]::after,
+.ProseMirror h6[data-collapsed="true"]::after {
   transform: rotate(-90deg);
   opacity: 1;
 }
 
-.ProseMirror h1[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
-.ProseMirror h2[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
-.ProseMirror h3[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
-.ProseMirror h4[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
-.ProseMirror h5[data-collapsed="true"][dir="rtl"] .heading-collapse-icon,
-.ProseMirror h6[data-collapsed="true"][dir="rtl"] .heading-collapse-icon {
-  transform: rotate(90deg);
+.ProseMirror h1:hover::after,
+.ProseMirror h2:hover::after,
+.ProseMirror h3:hover::after,
+.ProseMirror h4:hover::after,
+.ProseMirror h5:hover::after,
+.ProseMirror h6:hover::after {
   opacity: 1;
 }
 
-.ProseMirror h1:hover .heading-collapse-icon,
-.ProseMirror h2:hover .heading-collapse-icon,
-.ProseMirror h3:hover .heading-collapse-icon,
-.ProseMirror h4:hover .heading-collapse-icon,
-.ProseMirror h5:hover .heading-collapse-icon,
-.ProseMirror h6:hover .heading-collapse-icon {
-  opacity: 1;
-}
-
-.ProseMirror div.callout h1 .heading-collapse-icon,
-.ProseMirror div.callout h2 .heading-collapse-icon,
-.ProseMirror div.callout h3 .heading-collapse-icon,
-.ProseMirror div.callout h4 .heading-collapse-icon,
-.ProseMirror div.callout h5 .heading-collapse-icon,
-.ProseMirror div.callout h6 .heading-collapse-icon {
-  display: none;
-}
-
-/* hide collapse icon when heading is empty (only contains trailing break) */
-.ProseMirror h1:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h2:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h3:has(> div  > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h4:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h5:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h6:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon {
+.ProseMirror h1.is-empty::after,
+.ProseMirror h2.is-empty::after,
+.ProseMirror h3.is-empty::after,
+.ProseMirror h4.is-empty::after,
+.ProseMirror h5.is-empty::after,
+.ProseMirror h6.is-empty::after {
   display: none !important;
 }
 
 @media screen and (max-width: 768px) {
-  .ProseMirror h1 .heading-collapse-icon,
-  .ProseMirror h2 .heading-collapse-icon,
-  .ProseMirror h3 .heading-collapse-icon,
-  .ProseMirror h4 .heading-collapse-icon,
-  .ProseMirror h5 .heading-collapse-icon,
-  .ProseMirror h6 .heading-collapse-icon {
+  .ProseMirror h1::after,
+  .ProseMirror h2::after,
+  .ProseMirror h3::after,
+  .ProseMirror h4::after,
+  .ProseMirror h5::after,
+  .ProseMirror h6::after {
     opacity: 1 !important;
   }
 }
